# Procsight

./: CMakeLists.txt  ProcessList.cpp  ProcessList.hpp  README.md  SystemStats.cpp  SystemStats.hpp  main.cpp
include/: App.hpp  NcursesSession.hpp  ProcessList.hpp  Renderer.hpp  SystemStats.hpp  Theme.hpp
src/: App.cpp  NcursesSession.cpp  ProcessList.cpp  Renderer.cpp  SystemStats.cpp  Theme.cpp  main.cpp
